# TeacherAssist-MCP

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/db/: database.py
app/mcp/: server.py
app/mcp/tools/: mark_tools.py  student_tools.py
app/models/: exam.py  mark.py  student.py  subject.py
app/routes/: exam.py  student.py  subject.py
app/schemas/: exam.py  mark.py  student.py  subject.py
app/services/: email_service.py  exam.py  mark.py  mark_service.py  student_service.py  subject.py
report-lab/: 1-simple.py  2-simple.py
