[project]
name = "teacherassist-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofile==3.11.1",
    "aiosmtplib>=5.1.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "authlib==1.7.2",
    "beartype==0.22.9",
    "cachetools==7.1.4",
    "caio==0.9.25",
    "certifi==2026.5.20",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "click==8.4.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==49.0.0",
    "cyclopts==4.18.0",
    "dnspython==2.8.0",
    "docstring-parser==0.18.0",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fastapi==0.137.1",
    "fastmcp==3.4.2",
    "fastmcp-slim==3.4.2",
    "greenlet==3.5.1 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "griffelib==2.0.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.2",
    "jaraco-functools==4.5.0",
    "jeepney==0.9.0 ; sys_platform == 'linux'",
    "joserfc==1.7.1",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-path==0.5.0",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "markdown-it-py==4.2.0",
    "mcp==1.28.0",
    "mdurl==0.1.2",
    "more-itertools==11.1.0",
    "openapi-pydantic==0.5.1",
    "opentelemetry-api==1.42.1",
    "packaging==26.2",
    "pathable==0.6.0",
    "platformdirs==4.10.0",
    "psycopg-binary==3.3.4 ; implementation_name != 'pypy'",
    "psycopg2-binary==2.9.12",
    "psycopg[binary]==3.3.4",
    "py-key-value-aio==0.4.5",
    "pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pygments==2.20.0",
    "pyjwt==2.13.0",
    "pyperclip==1.11.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pywin32==312 ; sys_platform == 'win32'",
    "pywin32-ctypes==0.2.3 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "rich==15.0.0",
    "rich-rst==2.0.1",
    "rpds-py==2026.5.1",
    "secretstorage==3.5.0 ; sys_platform == 'linux'",
    "sqlalchemy==2.0.51",
    "sse-starlette==3.4.4",
    "starlette==1.3.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2 ; sys_platform == 'win32'",
    "uncalled-for==0.3.2",
    "uvicorn==0.49.0",
    "watchfiles==1.2.0",
    "websockets==16.0",
]
